<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/convert_portfolio_graph"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    >

    <com.robinhood.spark.SparkView
        android:id="@+id/convert_portfolio_graph_sparkview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:spark_lineColor="@color/green"
        app:spark_scrubEnabled="true"
        />

    <TextView
        android:id="@+id/convert_portfolio_graph_txt_scrub_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/scrub_empty"
        android:textColor="@color/black"
        android:textAppearance="?android:textAppearanceSmall"
        />

    <LinearLayout
        android:id="@+id/convert_portfolio_graph_periods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        >

        <TextView
            android:id="@+id/convert_portfolio_graph_btn_day"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/one_day"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/rounded_corner"
            app:layout_constraintTop_toBottomOf="@+id/scrub_info_textview"
            />

        <TextView
            android:id="@+id/convert_portfolio_graph_btn_week"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/one_week"
            android:clickable="true"
            android:focusable="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/orange"
            android:textStyle="bold"

            />
        <TextView
            android:id="@+id/convert_portfolio_graph_btn_month"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/one_month"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/orange"
            />

        <TextView
            android:id="@+id/convert_portfolio_graph_btn_ytd"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/ytd"
            android:clickable="true"
            android:focusable="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/orange"
            />

    </LinearLayout>

</LinearLayout>