<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">
    <com.robinhood.spark.SparkView
        android:id="@+id/sparkview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:spark_lineColor="@color/green"
        app:spark_scrubEnabled="true"/>

    <TextView
        android:id="@+id/scrub_info_textview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/scrub_empty"
        android:textColor="@color/black"
        android:textAppearance="?android:textAppearanceSmall"
        app:layout_constraintTop_toBottomOf="@+id/sparkview"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/periods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintTop_toBottomOf="@+id/scrub_info_textview"
        >
    <TextView
        android:id="@+id/day"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/one_day"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/rounded_corner"
        app:layout_constraintTop_toBottomOf="@+id/scrub_info_textview"
        />
    <TextView
        android:id="@+id/week"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/one_week"
        android:clickable="true"
        android:focusable="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/day"
        app:layout_constraintTop_toBottomOf="@+id/scrub_info_textview"

        />
    <TextView
        android:id="@+id/month"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/one_month"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/orange"
        app:layout_constraintTop_toBottomOf="@+id/scrub_info_textview"
        app:layout_constraintLeft_toLeftOf="@id/week"

        />
    <TextView
        android:id="@+id/ytd"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/ytd"
        android:clickable="true"
        android:focusable="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/orange"
        app:layout_constraintLeft_toLeftOf="@id/month"

        app:layout_constraintTop_toBottomOf="@+id/scrub_info_textview"
        />
   </androidx.appcompat.widget.LinearLayoutCompat>
    <ListView
        android:id="@+id/convert_main_portfolio_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
 android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/periods"
       />

</androidx.constraintlayout.widget.ConstraintLayout>